--- a/_posts/2020-09-25-K Means.md
+++ b/_posts/2020-09-25-K Means.md
@@ -10,6 +10,8 @@ tags:
     - machine learning
 ---
 
+an unsupervised machine learning technique used to identify clusters of data objects in a dataset
+
 ## Silhouette Score
 Silhouette Score used to evaluate clustering performance
 
