--- a/_posts/2020-11-16-PyCaret.md
+++ b/_posts/2020-11-16-PyCaret.md
@@ -70,7 +70,7 @@ The evaluation metrics used are:
     clf1 = setup(data, target = 'name-of-target')
 
     # train logistic regression model
-    lr = create_model('lr') #lr is the id of the model
+    lr = create_model('lr') #lr is the id of the model 
 
     # check the model library to see all models
     models()
@@ -167,6 +167,7 @@ ensembel learner: ensemble_model, blend_models and stack_models and so on
     stacker = stack_models(estimator_list = top7[1:], meta_model = top7[0])
 
 ### Predict Model
+evaluate the model on previously unseen data
 
     # train a catboost model
     catboost = create_model('catboost')
@@ -200,6 +201,18 @@ ensembel learner: ensemble_model, blend_models and stack_models and so on
 
     # Validation Curve
     plot_model(adaboost, plot = 'vc')
+
+### Model interpretation with SHAP
+
+    interpret_model(xgb) #xgb is the model variable
+
+### Model saving and loading
+
+    #Before saving the model, we need to finalize it
+    finalize_model(xgb)
+    save_model(xgb, ‘diabetes_xgboost’)
+    #reload model
+    model = load_model(‘diabetes_xgboost’)
 
 ### Util functions
 
