--- a/_posts/2020-09-20-CI&CD.md
+++ b/_posts/2020-09-20-CI&CD.md
@@ -11,7 +11,7 @@ tags:
     - docker
 ---
 
-automate python project with docker and makefile
+automate machine learning project with docker, makefile and Devops tools
 
 ## docker
 ### development
@@ -127,3 +127,18 @@ clean up docker artifacts
 
         docker-clean:
 	@docker system prune -f --filter "label=name=$(MODULE)"
+
+## MLRun
+works together with tools like Nuclio (serverless engine) and Kubeflow pipelines to automate the MLOps process and bring CI/CD + Git practices to data science. It provides an SDK and a Kubernetes service.
+### single function
+![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20210104195736.png)
+an example to mlrun function is here: https://github.com/mlrun/mlrun/blob/development/examples/mlrun_export_import.ipynb. the functions can be run in following mode:
+1) As a local executable 
+2) As an auto-scaling containerized micro-service 
+3) As an in-memory module
+
+### complex pipeline
+complex pipeline can be managed by kubeflow pipeline, the kubeflow pipeline can be execuated and tracked by MLRun.
+![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20210104200532.png)
+an example is here: https://github.com/mlrun/demo-github-actions
+
