--- a/_posts/2020-10-27-Bash.md
+++ b/_posts/2020-10-27-Bash.md
@@ -10,18 +10,128 @@ tags:
     - bash
 ---
 
-## start line
+## common usages
+### check available shell
+
+    cat /etc/shells
+    #check current shell
+    echo $SHELL
+
+### multiline comments
+use : ' and ' for multiline comments
+
+### Here Document
+The content between the two delimiters (Here Document Content part) is passed to cmd as an input parameter
+
+    cat << EOF
+    First Line
+    Second Line
+    Third Line EOF
+    EOF
+
+### conditional statement
+
+    if [$num -gt 5] && [$num -lt 10] 
+    then
+        echo "in range 5 and 10"
+    elif [$num -lt 5] || [$num -gt 10]
+        echo "not in range 5 and 10"
+    else
+        echo "not equal!"
+    fi
+
+### for loop
+
+    for i in {1..5}
+    #for i in $(seq 1 2 10)
+    do 
+        echo $i
+    done
+
+### string processing
+
+    #length of string
+    echo $(#str_name)
+    #cat string
+    newstring=$str1$str2
+
+### arithmetics
+
+    echo $((num1 + num2))
+    #or
+    echo $(expr $num1 - $num2)
+
+    echo $((num1 * num2))
+    #or
+    echo $(expr $num1 \* $num2)
+
+    #convert hex to decimal
+    echo "obase=10; ibase=16; $hex" | bc
+
+### declare statement
+declare [-aixr] variable    
+-a: Define the following variable as an array
+-i: Define the following variavle as an integer number
+-x: The usage is the same as export, which is to turn the following variable into an environment variable
+-r: Set a variable to read-only. Reading the variable cannot change the content, nor can it unset
+
+### check file and directory
+
+    if [-d $dir]
+    then
+        echo "it is a directory"
+    fi
+    if [-f $file]
+    then
+        echo "it is a file"
+    fi
+
+### filter
+### grep
+
+    #check if pattern exists in logfile
+    grep -q $pattern $logfile
+    #print a line not containing the pattern
+    grep -v $pattern $logfile
+    #print a line ignoring case in pattern
+    grep -i $pattern $logfile
+    #print a line after teh matched pattern
+    grep -A1 $pattern $logfile
+    #print a line before teh matched pattern
+    grep -B1 $pattern $logfile
+
+#### awk
+
+    #print entire file contents
+    awk '{print}' $filename
+    #print lines containing pattern
+    awk '/root/ {print}' $filename
+    #print 3th columns of the line containing pattern
+    awk '/root/ {print $3}' $filename
+
+#### sed
+
+    #replace first matching of root with other word groot
+    sed "s/root/groot/" $filename
+    #replace all matching 
+    sed "s/root/groot/g" $filename
+    #replace and write change to file
+    wed -i "s/root/groot/g" $filename
+
+
+## Tips
+### start line
 
     #!/usr/bin/env bash
 
-## arguments
+### arguments
 
     if [[ $# != 2 ]];then
         echo "Parameter incorrect."
         exit 1
     fi
 
-## double quotes
+### double quotes
 
     #!/bin/sh
     #as known there is an a.sh file in current folder
@@ -32,7 +142,7 @@ tags:
     a.sh
     *.sh
 
-## use main
+### use main
 
     #!/usr/bin/env bash
     func1(){
@@ -47,7 +157,7 @@ tags:
     }
     main "$@"
 
-## default variable scope is global
+### default variable scope is global
 
     #!/usr/bin/env bash
     var=1
@@ -59,24 +169,24 @@ tags:
     #output
     2
 
-## return value
+### return value
 return value of function can only be integer, but there are some work-arounds for string return value
 
     func(){
-    echo "2333"
+        echo "2333"
     }
     res=$(func)
     echo "This is from $res."
 
-## Indirect reference
+### Indirect reference
 
     VAR1="2323232"
     VAR2=VAR1
     eval $VAR1=233
     echo ${!VAR1}
 
-## heredocs
-used for multiline input
+### heredocs to file
+write multiline contents to file
 
     cat>>/etc/rsyncd.conf << EOF
     log file = /usr/local/logs/rsyncd.log
@@ -85,12 +195,12 @@ used for multiline input
     syslog facility = local3
     EOF
 
-## path
+### path
 
     script_dir=$(cd $(dirname $0) && pwd)
     script_dir=$(dirname $(readlink -f $0 ))
 
-## keep code short
+### keep code short
 
     #bad
     cat /etc/passwd | grep root
@@ -106,7 +216,7 @@ used for multiline input
     find . -name '*.txt' |
     xargs sed -i "s/233/666/g;s/235/626/g;s/333/616/g;s/233/664/g"
 
-## Parallelization
+### Parallelization
 parallelization with "&" and "wait" commands
 
     func(){
@@ -117,9 +227,19 @@ parallelization with "&" and "wait" commands
     done
     wait
 
-## text search
+### text search
 
     find . -name '*.txt' -type f | xargs grep 2333
     #if there is space in .txt name then
     find . -type f|xargs -i echo '"{}"'|xargs grep 2333
-    
+
+### standard input
+$#-->number of input parameter
+$@-->all input parameters
+
+### switch
+
+    select cart in amazon flipkart local
+    do 
+        echo "cart is selected"
+        
