--- a/_posts/2020-12-29-AutoML.md
+++ b/_posts/2020-12-29-AutoML.md
@@ -11,3 +11,52 @@ tags:
 ---
 
 automl can deploy thousands of models in production, with far less grunt work and hand-tuning, reducing turn-around-time drastically.
+
+## tpot
+tpot is an automated machine learning tool in python. the official user manual is here: http://epistasislab.github.io/tpot/api/
+![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20210104000151.png)
+it isn’t designed for automating deep learning, but rather classiccal machine learning. it is built on the scikit learn library and follows the scikit learn API. Typical user cases are: regression and classification.    
+remember that: tpot does not have Reproducibility for the results!!
+### usage
+
+    tpot = TPOTClassifier()
+    tpot.fit(X_train, y_train)
+    tpot.score(X_test, y_test)
+
+#### example
+1) MNIST
+
+    # import the usual stuff
+    import numpy as np 
+    import pandas as pd 
+    import matplotlib.pyplot as plt
+    import seaborn as sns
+    import os# import TPOT and sklearn stuff
+    from tpot import TPOTClassifier
+    from sklearn.datasets import load_digits
+    from sklearn.model_selection import train_test_split
+    import sklearn.metrics# create train and test sets
+    digits = load_digits()
+    X_train, X_test, y_train, y_test = train_test_split(digits.data, digits.target, train_size=0.75, test_size=0.25, random_state=34)
+    #total number of pipeline: POPULATION_SIZE + GENERATIONS x OFFSPRING_SIZE
+    #the accuracy is better with more number of pipeline
+    tpot = TPOTClassifier(verbosity=3, 
+                        scoring="balanced_accuracy", 
+                        random_state=23, 
+                        periodic_checkpoint_folder="tpot_mnst1.txt", 
+                        n_jobs=-1, 
+                        generations=10, 
+                        population_size=100)
+    # run three iterations and time them
+    for x in range(3):
+        start_time = timeit.default_timer()
+        tpot.fit(X_train, y_train)
+        elapsed = timeit.default_timer() - start_time
+        times.append(elapsed)
+        winning_pipes.append(tpot.fitted_pipeline_)
+        scores.append(tpot.score(X_test, y_test))
+        tpot.export('tpot_mnist_pipeline.py')
+    times = [time/60 for time in times]
+    print('Times:', times)
+    print('Scores:', scores)   
+    print('Winning pipelines:', winning_pipes)
