--- a/_posts/2020-09-05-Kafka.md
+++ b/_posts/2020-09-05-Kafka.md
@@ -9,7 +9,13 @@ catalog: true
 tags:
     - data engineering
 ---
-kafka is an open-source information system, which is able to provide uniform, high volumn and low latency data. kafka classify messages according to topic and store them afterwards
+kafka is an open-source information system, which is able to provide uniform, high volumn and low latency data. kafka classify messages according to topic and store them afterwards.
+Features:
+* Sequential I/O
+* Memory Mapped Files
+* Zero Copy based on sendfile
+* Batch compression
+
 
 ## components
 * producer  
