--- a/_posts/2020-10-11-Database.md
+++ b/_posts/2020-10-11-Database.md
@@ -314,3 +314,93 @@ access table column names, check constraints on the table or maybe check if colu
 * Both MongoDB and HarperDB scale horizontally
 * HarperDB is not recommended when you need full-text indexing, highly structured relational data, strict consistency across systems, or for projects where developers are not trusted to constrain and maintain data
 
+### ODBC
+ODBC stands for Open Database Connectivity, is a standardised application programming interface (API) for accessing databases
+
+    #an example to get data from database and send summary info per email
+    # imports for SQL data part
+    import pyodbc
+    from datetime import datetime, timedelta
+    import pandas as pd
+
+    # imports for sending email
+    from email.mime.text import MIMEText
+    from email.mime.multipart import MIMEMultipart
+    import smtplib
+
+    date = datetime.today() - timedelta(days=7)  # get the date 7 days ago
+
+    date = date.strftime("%Y-%m-%d")  # convert to format yyyy-mm-dd
+
+    cnxn = pyodbc.connect(cnxn_str)  # initialise connection (assume we have already defined cnxn_str)
+
+    # build up our query string
+    query = ("SELECT * FROM customers "
+            f"WHERE joinDate > '{date}'")
+
+    # execute the query and read to a dataframe in Python
+    data = pd.read_sql(query, cnxn)
+
+    del cnxn  # close the connection
+
+    # make a few calculations
+    mean_payment = data['payment'].mean()
+    std_payment = data['payment'].std()
+
+    # get max payment and product details
+    max_vals = data[['product', 'payment']].sort_values(by=['payment'], ascending=False).iloc[0]
+
+    # write an email message
+    txt = (f"Customer reporting for period {date} - {datetime.today().strftime('%Y-%m-%d')}.\n\n"
+        f"Mean payment amounts received: {mean_payment}\n"
+        f"Standard deviation of payment amounts: {std_payments}\n"
+        f"Highest payment amount of {max_vals['payment']} "
+        f"received from {max_vals['product']} product.")
+
+    # we will built the message using the email library and send using smtplib
+    msg = MIMEMultipart()
+    msg['Subject'] = "Automated customer report"  # set email subject
+    msg.attach(MIMEText(txt))  # add text contents
+        
+    # we will send via outlook, first we initialise connection to mail server
+    smtp = smtplib.SMTP('smtp-mail.outlook.com', '587')
+    smtp.ehlo()  # say hello to the server
+    smtp.starttls()  # we will communicate using TLS encryption
+        
+    # login to outlook server, using generic email and password
+    smtp.login('joebloggs@outlook.com', 'Password123')
+        
+    # send email to our boss
+    smtp.sendmail('joebloggs@outlook.com', 'joebloggsboss@outlook.com', msg.as_string())
+        
+    # finally, disconnect from the mail server
+    smtp.quit()
+
+#### connect
+
+    cnxn_str = ("Driver={SQL Server Native Client 11.0};"
+            "Server=UKXXX00123,45600;"
+            "Database=DB01;"
+            "Trusted_Connection=yes;")
+    cnxn = pyodbc.connect(cnxn_str)
+
+#### Query
+
+    cursor = cnxn.cursor()
+    cursor.execute("SELECT TOP(1000) * FROM customers")
+
+#### Extract Data
+
+    data = pd.read_sql("SELECT TOP(1000) * FROM customers", cnxn)
+
+
+#### update data
+
+    cursor = cnxn.cursor()
+    # first alter the table, adding a column
+    cursor.execute("ALTER TABLE customer " +
+                "ADD fullName VARCHAR(20)")
+    # now update that column to contain firstName + lastName
+    cursor.execute("UPDATE customer " +
+                "SET fullName = firstName + " " + lastName")
+    cnxn.commit()
