--- a/_posts/2020-10-27-Bash.md
+++ b/_posts/2020-10-27-Bash.md
@@ -118,6 +118,19 @@ declare [-aixr] variable
     #replace and write change to file
     wed -i "s/root/groot/g" $filename
 
+### array
+
+    #define array
+    $ declare -A userdata
+    $ userdata[name]=seth
+    $ userdata[pass]=8eab07eb620533b083f241ec4e6b9724
+    $ userdata[login]=`date --utc +%s`
+    #view entire array
+    $ typeset -A
+    #remove item from array
+    $ unset userdata[pass]
+    $ unset "userdata[*]"
+
 
 ## Tips
 ### start line
@@ -243,3 +256,19 @@ $@-->all input parameters
     do 
         echo "cart is selected"
         
+### bash history
+#### History control
+
+    #set history upper limit
+    export HISTSIZE=3000
+    #force Bash to exclude commands starting with empty space
+    export HISTCONTROL=$HISTCONTROL:ignorespace
+    #avoid duplicate entries
+    export HISTCONTROL=$HISTCONTROL:ignoredups
+
+#### Remove command from history
+
+    history | tail
+    history -d <history command id>
+    #clear entire session history
+    history -c
