--- a/_posts/2020-11-22-MLOps.md
+++ b/_posts/2020-11-22-MLOps.md
@@ -123,3 +123,18 @@ automate model.pkl deployment on k8s
     #install on k8s
     kubectl create ns argocd
     kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+
+### Roboflow
+a tool that simplifies data preparation and training process. Roboflow is free for small datasets.
+official webpage is here: https://public.roboflow.ai
+
+features are:
+* Convert VOC XML annotations to COCO JSON annotations (and vice versa)
+* See if your labels are in-frame (and one-click correct them if they are not)
+* Preprocess images: resizing, grayscale, auto-orientation, contrast adjustments
+* Augment images to increase your training data: flip, rotate, brighten / darken, crop, shear, blur, and add random noise
+* Generate annotation formats like TFRecords, CreateML and Turi Create, and custom YOLOv3 implementations (flat text files or Darknet)
+* Version datasets and share them with your team
+* Share datasets across your organization
+* Easily use your data across models built in Tensorflow, PyTorch, fast.ai, Keras, and more.
+* Obtain and share public datasets
