--- a/_posts/2020-10-27-Bash.md
+++ b/_posts/2020-10-27-Bash.md
@@ -254,8 +254,63 @@ $@-->all input parameters
 
     select cart in amazon flipkart local
     do 
-        echo "cart is selected"
-        
+        echo "$cart is selected"
+        case $cart in
+        amazon)
+            echo "this is amazon";;
+        flipkart)
+            echo "this is flipkart";;
+        local)
+            echo "this is local";;
+        *)
+            echo "no option, please reselect.."
+        esac
+    done
+### while
+
+    which [true]
+    do
+        read -t 3 key
+        if [$? -eq 0]
+        then
+            echo "terminating scipt..."
+            exit
+        else
+            echo "wait for input..."
+        fi
+    done
+
+### source
+you can import function defined in other bash script using source, and use that function in that script
+
+### parse config file
+
+    #conf.cfg
+    user="tim"
+    #conf_parse.sh
+    MYCONFIG="conf.cfg"
+    function parse_config(){
+        CONFIG=$1
+        cat $CONFIG | cut -d"=" -s -f1,2 > /tmp/temp.cfg
+        source /tmp/temp.cfg
+    }
+    parse_config $MYCONFIG
+
+### curl
+
+    #GET
+    curl -s http://test_url.com
+    #POST
+    curl -k -X POST http://test_url.com --data @data.json -H "Content-Type: application/json"
+    #use jq to handle response
+    curl -s http://test_url.com | jq
+    curl -s http://test_url.com | jq -r .data[0] > response.json
+
+### debugging
+-x will print out command in bash file line by line
+
+    bash -x test_debug.sh
+
 ### bash history
 #### History control
 
