--- a/_posts/2020-10-11-Database.md
+++ b/_posts/2020-10-11-Database.md
@@ -404,3 +404,6 @@ ODBC stands for Open Database Connectivity, is a standardised application progra
     cursor.execute("UPDATE customer " +
                 "SET fullName = firstName + " " + lastName")
     cnxn.commit()
+
+## Graph database
+Graphs are extremely useful when dealing with complex relations, non-fixed schemas and large data sets
