--- a/_posts/2020-11-14-Sk-Learn.md
+++ b/_posts/2020-11-14-Sk-Learn.md
@@ -173,4 +173,70 @@ pipeline can be used to transform features for a machine learning model.
     y = df['target']
     X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)
     clf.fit(X_train, y_train)
-    
+
+### Decision Threshold 
+using scikit-lego and yellowbrick you can tune decision threshold to have a good balance between precision and recall
+
+
+    import pandas as pd
+    import numpy as np
+
+    from sklego.datasets import load_hearts
+    from sklearn.model_selection import train_test_split
+
+    data = load_hearts(as_frame=True)
+    X, y = data.drop(columns='target'), data['target']
+    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)
+
+    from sklearn.pipeline import make_union, make_pipeline
+    from sklearn.preprocessing import OneHotEncoder, StandardScaler
+    from sklearn.impute import SimpleImputer
+
+    #sklego provides a PandasTypeSelector, so that numerical and categrical pipeline are combined
+    from sklego.preprocessing import PandasTypeSelector
+
+    cat_features_preprocessing = make_pipeline(PandasTypeSelector(exclude='number'),
+                                            SimpleImputer(strategy='constant', fill_value='unknown'), 
+                                            OneHotEncoder(categories=[['normal', 'sth', 'fixed']], handle_unknown='ignore'))
+
+    num_features_preprocessing = make_pipeline(PandasTypeSelector(include='number'),
+                                            SimpleImputer(strategy='median'),
+                                            StandardScaler())
+
+    preprocessor = make_union(cat_features_preprocessing, num_features_preprocessing)
+
+    #train model
+    from sklearn.linear_model import LogisticRegression
+    from sklearn.model_selection import GridSearchCV
+
+    model = LogisticRegression()
+    pipe = make_pipeline(preprocessor, model)
+
+    param_grid = {'logisticregression__C': np.logspace(-2, 1, 10)}
+
+    #elected the best model using average_precision rather than f1 score will produce more flexibility in selecting best model
+    grid = GridSearchCV(pipe, param_grid, cv=5, scoring='average_precision',
+                        n_jobs=-1, verbose=1, return_train_score=True)
+    grid.fit(X_train, y_train)
+
+    print(grid.best_score_)
+    best_model = grid.best_estimator_
+
+    # show confusion metrix
+    from yellowbrick.classifier import ConfusionMatrix
+    cm = ConfusionMatrix(best_model, cmap='Blues')
+    cm.score(X_train, y_train)
+    cm.show();
+    #show threadhold change on precision and recall (f1 is the harmonic mean of the two)
+    from yellowbrick.classifier import DiscriminationThreshold
+    visualizer = DiscriminationThreshold(best_model, quantiles=np.array([0.25, 0.5, 0.75]))
+    visualizer.fit(X_train, y_train)
+    visualizer.show();   
+
+    # use argmax and Threadhold to tune the model
+    from sklego.meta import Thresholder
+    #visualizer.argmax is equal to f1
+    best_threshold = visualizer.thresholds_[visualizer.cv_scores_[visualizer.argmax].argmax()]
+    #get final pipeline using best threadhold
+    pipe = make_pipeline(*best_model[:-1], Thresholder(best_model[1], best_threshold))
+    pipe.fit(X_train, y_train);
